<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RecipeFormActivity">

    <EditText
        android:id="@+id/idEdtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/recipe_name"
        android:inputType="text"
        android:singleLine="true"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/idEdtDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/recipe_duration"
        android:inputType="text"
        android:singleLine="true"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/idEdtDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/recipe_description"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:autofillHints="name"/>

    <Button
        android:id="@+id/idBtnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:padding="5dp"
        android:text="@string/recipe_save"
        android:textAllCaps="false" />

</LinearLayout>
