<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp"
    tools:context=".RecipeShowActivity"
    tools:layout_editor_absoluteX="15sp"
    tools:layout_editor_absoluteY="15sp">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"
        android:keyboardNavigationCluster="false"
        android:text="@string/recipe_name"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/durationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp">

        <TextView
            android:id="@+id/durationLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10sp"
            android:text="@string/recipe_duration"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="38sp"
            tools:layout_editor_absoluteY="57sp" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="16sp"
            tools:layout_editor_absoluteX="38sp"
            tools:layout_editor_absoluteY="57sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_description"
        android:textColor="@color/black"
        android:textSize="15sp" />
</LinearLayout>